--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "fabric": "^5.3.0",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/fabric": "^5.3.7",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
